--- a/extension/chrome/sidepanel.html
+++ b/extension/chrome/sidepanel.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <!-- <h1>hello</h1> -->
-    <iframe src="https://aitutor.live/?embed=true"></iframe>
+    <iframe src="http://localhost:8501/?embed=true"></iframe>
   </body>
 </html>
