got analytics working fixes #60, also made some polishes and small fixes

--- a/streamlit/head.html
+++ b/streamlit/head.html
@@ -8,4 +8,19 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
 />
+
+<!-- analytics -->
+<script
+  defer
+  data-domain="aitutor.live"
+  src="https://analytics.aitutor.live/js/script.file-downloads.outbound-links.pageview-props.tagged-events.js"
+></script>
+<script>
+  window.plausible =
+    window.plausible ||
+    function () {
+      (window.plausible.q = window.plausible.q || []).push(arguments);
+    };
+</script>
+
 <div id="custom-head-tag"></div>
