--- a/svelte/src/app.html
+++ b/svelte/src/app.html
@@ -1,34 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
 	<head>
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.css"
-			integrity="sha384-zh0CIslj+VczCZtlzBcjt5ppRcsAmDnRem7ESsYwWwg3m/OaJ2l4x7YBZl9Kxxib"
-			crossorigin="anonymous"
-		/>
-		<!-- The loading of KaTeX is deferred to speed up page rendering -->
-		<script
-			defer
-			src="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.js"
-			integrity="sha384-Rma6DA2IPUwhNxmrB/7S3Tno0YY7sFu9WSYMCuulLhIqYSGZ2gKCJWIqhBWqMQfh"
-			crossorigin="anonymous"
-		></script>
-		<!-- To automatically render math in text elements, include the auto-render extension: -->
-		<script
-			defer
-			src="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/contrib/auto-render.min.js"
-			integrity="sha384-hCXGrW6PitJEwbkoStFjeJxv+fSOOQKOPbJxSfM6G5sWZjAyWhXiTIIAmQqnlLlh"
-			crossorigin="anonymous"
-			onload="renderMathInElement(document.body);"
-		></script>
-
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" data-theme="sahara">
+	<body data-sveltekit-preload-data="hover" data-theme="vintage">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
